# LittleLemon

./: README.md  pyproject.toml
api/: serializers.py  urls.py  views.py
littlelemon/: settings.py  urls.py
restaurant/: models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py
restaurant/templates/restaurant/: index.html
